--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -164,7 +164,7 @@
 </mat-tab-group>
 
 <div class="primary-button">
-  <button mat-fab color="primary">
+  <button mat-fab color="primary" routerLink="add-buff">
     <mat-icon>add</mat-icon>
   </button>
 </div>
