--- a/src/app/add-buff/add-buff.page.scss
+++ b/src/app/add-buff/add-buff.page.scss
@@ -1,20 +1,42 @@
-.example-container {
-  width: 95%;
-  display: flex;
-  flex-direction: column;
+.buff-form {
+  max-width: 500px;
+  position: absolute;
+  float: top;
+  align-content: center;
+  align-self: center;
+  width: 90%;
   align-items: center;
   justify-content: center;
-}
-
-.example-container > * {
-  width: 95%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin-top: 5rem;
 }
 
 .name-buff {
   width: 100%;
   flex-direction: column;
-  float: top;
+  align-content: center;
 }
+
+.ts-buff {
+  width: 95%;
+  max-width: 7rem;
+}
+
+.ca-buff {
+  width: 60%;
+}
+
+.save-button {
+  align-content: center;
+  text-align: center;
+  align-self: center;
+  width: 75%;
+  position: fixed;
+  left: 50%;
+  margin-left: -37.5%;
+  bottom: 1rem;
+  z-index: 1;
+}
+
+.save-button-div {
+}
+
