Modifiche pagina di aggiunta buff

--- a/src/app/add-buff/add-buff.page.html
+++ b/src/app/add-buff/add-buff.page.html
@@ -9,7 +9,7 @@
 
 <form class="buff-form">
 
-  <mat-form-field class="name-buff">
+  <mat-form-field class="name-buff" appearance="outline">
     <input matInput placeholder="Nome Buff">
     <mat-icon matSuffix color="accent">bolt</mat-icon>
   </mat-form-field>
