--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -78,7 +78,7 @@
                 </div>
               </div>
               <div>
-                <button mat-icon-button>
+                <button mat-icon-button routerLink="edit-buff">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
@@ -117,7 +117,7 @@
                 </div>
               </div>
               <div>
-                <button mat-icon-button>
+                <button mat-icon-button routerLink="edit-buff">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
@@ -183,7 +183,7 @@
                 </div>
               </div>
               <div>
-                <button mat-icon-button>
+                <button mat-icon-button routerLink="edit-buff">
                   <mat-icon>edit</mat-icon>
                 </button>
               </div>
