--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,33 +1,38 @@
 <mat-drawer-container autosize>
-    <mat-drawer #drawer class="sidenav" mode="side" style="width: 200px">
+    <mat-sidenav #drawer class="sidenav" mode="over" style="width: 80%;">
         <mat-toolbar color="primary" label="Lista Personaggi">
             <mat-label style="width: 70%">Lista Pg</mat-label>
             <button type="button" mat-icon-button style="width: 30%" (click)="drawer.toggle()">
                 <mat-icon aria-label="close">close</mat-icon>
             </button>
         </mat-toolbar>
-        <mat-list align-items-stretch>
-            <mat-list-item style="width: 100%">
-                <button type="button" mat-button style="width: 100%">PG 1</button>
-            </mat-list-item>
-            <mat-list-item>
-                <button type="button" mat-button style="width: 100%">PG 2</button>
-            </mat-list-item>
-            <mat-list-item>
-                <button type="button" mat-button style="width: 100%">PG 3</button>
-            </mat-list-item>
-        </mat-list>
-        <mat-grid-list cols="1">
-            <mat-grid-tile>
-                <button mat-raised-button routerLink="add-character">Nuovo</button>
-            </mat-grid-tile>
-        </mat-grid-list>
-    </mat-drawer>
+        <mat-nav-list>
+            <a id="pg1" mat-list-item>
+                <mat-icon aria-label="face">face</mat-icon>
+                <span style="padding-left: 5%">Arthas</span>
+            </a>
+            <a id="pg2" mat-list-item>
+                <mat-icon aria-label="face">face</mat-icon>
+                <span style="padding-left: 5%">Sharrim</span>
+            </a>
+            <a id="pg3" mat-list-item>
+                <mat-icon aria-label="face">face</mat-icon>
+                <span style="padding-left: 5%">Vel'Koz</span>
+            </a>
+            <mat-grid-list cols="1">
+                <mat-grid-tile>
+                    <button mat-raised-button routerLink="add-character" color="primary">Nuovo</button>
+                </mat-grid-tile>
+            </mat-grid-list>
+        </mat-nav-list>
+    </mat-sidenav>
 
     <div class="sidenav-content">
-        <button type="button" mat-button (click)="drawer.toggle()">
-            PG Menu
-        </button>
+        <mat-toolbar color="primary">
+            <button type="button" mat-icon-button (click)="drawer.toggle()">
+                <mat-icon aria-label="menu">menu</mat-icon>
+            </button>
+        </mat-toolbar>
     </div>
 
     <mat-tab-group mat-stretch-tabs class="example-stretched-tabs mat-elevation-z4">
