Aggiunta prima versione pagina di edit-buff

--- a/src/app/edit-buff/edit-buff.page.html
+++ b/src/app/edit-buff/edit-buff.page.html
@@ -83,7 +83,7 @@
 
 
   <div class="save-button-div">
-    <button mat-flat-button color="primary" routerLink="" class="save-button">Salva</button>
+    <button mat-flat-button color="accent" routerLink="" class="del-button">Elimina</button>
   </div>
 
 </form>
