Character creation working, with minor graphics issues

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -21,7 +21,7 @@
                 </a>
                 <mat-grid-list cols="1">
                     <mat-grid-tile>
-                        <button mat-raised-button routerLink="add-character" color="primary">Nuovo</button>
+                        <button mat-raised-button class="new-button" routerLink="add-character" color="primary">Nuovo</button>
                     </mat-grid-tile>
                 </mat-grid-list>
             </mat-nav-list>
