--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -7,8 +7,12 @@ mat-drawer-container {
     max-width: 20rem;
 }
 
+.new-button {
+    width: 80%;
+}
+
 .normal-card {
-    margin: 1rem;;
+    margin: 1rem;
 }
 
 .colp-card {
