Selected character's is now shown on the homepage toolbar

--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -11,6 +11,12 @@ mat-drawer-container {
     width: 80%;
 }
 
+.selected-pg {
+    width: 100%;
+    padding-left: 10%;
+    align-content: end;
+}
+
 .normal-card {
     margin: 1rem;
 }
