--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,23 +1,23 @@
 <mat-drawer-container>
         <mat-drawer #drawer class="sidenav">
             <mat-toolbar color="primary" label="Lista Personaggi">
-                <mat-label style="width: 70%">Lista Pg</mat-label>
+                <mat-label style="width: 70%">Lista Personaggi</mat-label>
                 <button type="button" mat-icon-button style="width: 30%" (click)="drawer.toggle()">
                     <mat-icon aria-label="close">close</mat-icon>
                 </button>
             </mat-toolbar>
             <mat-nav-list>
-                <a id="pg1" mat-list-item>
+                <a id="pg1" mat-list-item (click)="onSelChange('Arthas');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
-                    <span style="padding-left: 5%">Arthas</span>
+                    <mat-label style="padding-left: 5%">Arthas</mat-label>
                 </a>
-                <a id="pg2" mat-list-item>
+                <a id="pg2" mat-list-item (click)="onSelChange('Sharrim');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
-                    <span style="padding-left: 5%">Sharrim</span>
+                    <mat-label style="padding-left: 5%">Sharrim</mat-label>
                 </a>
-                <a id="pg3" mat-list-item>
+                <a id="pg3" mat-list-item (click)="onSelChange('Vel\'Koz');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
-                    <span style="padding-left: 5%">Vel'Koz</span>
+                    <mat-label style="padding-left: 5%">Vel'Koz</mat-label>
                 </a>
                 <mat-grid-list cols="1">
                     <mat-grid-tile>
@@ -32,6 +32,7 @@
                 <button type="button" mat-icon-button (click)="drawer.toggle()">
                     <mat-icon aria-label="menu">menu</mat-icon>
                 </button>
+                <span class="selected-pg">{{ selection }}</span>
             </mat-toolbar>
         </div>
 
