Edit character working with graphic issues TBS soon

--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -10,14 +10,23 @@
                 <a id="pg1" mat-list-item (click)="onSelChange('Arthas');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
                     <mat-label style="padding-left: 5%">Arthas</mat-label>
+                    <button class="edit-char-button" mat-icon-button routerLink="edit-character">
+                        <mat-icon>edit</mat-icon>
+                    </button>
                 </a>
                 <a id="pg2" mat-list-item (click)="onSelChange('Sharrim');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
                     <mat-label style="padding-left: 5%">Sharrim</mat-label>
+                    <button class="edit-char-button" mat-icon-button routerLink="edit-character">
+                        <mat-icon>edit</mat-icon>
+                    </button>
                 </a>
                 <a id="pg3" mat-list-item (click)="onSelChange('Vel\'Koz');drawer.toggle()">
                     <mat-icon aria-label="face">face</mat-icon>
                     <mat-label style="padding-left: 5%">Vel'Koz</mat-label>
+                    <button class="edit-char-button" mat-icon-button routerLink="edit-character">
+                        <mat-icon>edit</mat-icon>
+                    </button>
                 </a>
                 <mat-grid-list cols="1">
                     <mat-grid-tile>
