--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -83,12 +83,12 @@
         </mat-grid-list>
 
         <mat-selection-list #combatBuffs>
-          <mat-list-option *ngFor="let buff of allBuffs" class="option-row">
+          <mat-list-option *ngFor="let buff of buffs" class="option-row" [selected]="buff.selected">
             <div style="display:flex; justify-content:space-between;align-items:center">
               <div style="display:flex;align-items:center">
                 <div style="display:flex; flex-direction:column">
                   <div>
-                    {{ buff }}
+                    {{ buff.name }}
                   </div>
                 </div>
               </div>
